--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -87,3 +87,11 @@ year = {n.d.},
   year = {n.d.},
   note = {Accessed 22.11.2018}
 }
+
+@misc{JuliaIssueDot,
+  key = {Julia issue dot operators},
+  url = {https://github.com/probcomp/GenExperimental.jl/issues/46},
+  urldate = {2018-12-02},
+  year = {n.d.},
+  note = {Accessed 02.12.2018}
+}
